--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </thead>
         <tbody id="courtyard"></tbody>
     </table>
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
