Added functions, update reademe and modifyd tbody id

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <input 
         type="text" 
+        id="name" 
         name="name" 
         placeholder="Digite o nome do veículo..."
         autocomplete="off"
     />
     <input 
         type="text" 
+        id="plate"
         name="plate"
         placeholder="Digite número da placa..."
         autocomplete="off"
@@ -31,7 +33,7 @@
                 <th>Ações</th>
             </tr>
         </thead>
-        <tbody id="courtyard"></tbody>
+        <tbody id="parking-lot"></tbody>
     </table>
 
     <script src="./app.js"></script>
